gcc/testsuite/rust/rustc/ui/pub/pub-ident-fn.rs
// run-rustfix

pub   foo(_s: usize) -> bool { true }
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {
    foo(2);
}

